--- a/css/blue.css
+++ b/css/blue.css
@@ -1,126 +1,36 @@
-#blueRow{
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
+@media (min-width:320px) { /* Phones */
+    #blueRow{
+        display: flex;
+        justify-content: center;
+        font-size: 30px;
+        
+    }
+    
+    #blue2, #blue3, #blue4, #blue5, #blue6, #blue7, #blue8, #blue9, #blue10, #blue11, #blue12, #blueLock{
+        background-color: #BFC8E9;
+        margin-right: 10px;
+        padding: 5px 10px 5px 10px;
+    }
     
 }
-#blue2{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue3{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue4{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue5{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue6{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue7{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue8{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue9{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue10{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue11{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue12{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blueLock{
-    background-color: #BFC8E9;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
+@media (min-width:1000px) { /* Desktop */
+    #blueRow{
+        display: flex;
+        justify-content: center;
+        font-size: 40px;
+        
+    }
+    
+    #blue2, #blue3, #blue4, #blue5, #blue6, #blue7, #blue8, #blue9, #blue10, #blue11, #blue12, #blueLock{
+        background-color: #BFC8E9;
+        margin-right: 10px;
+        padding: 10px 20px 10px 20px;
+    }
 }
 
-#blue2:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue3:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue4:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue5:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue6:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue7:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue8:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue9:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue10:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue11:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blue12:hover{
-    background-color: blue;
-    margin-right: 10px;
-    padding: 10px 20px 10px 20px;
-}
-#blueLock:hover{
+
+
+#blue2:hover, #blue3:hover, #blue4:hover, #blue5:hover, #blue6:hover, #blue7:hover, #blue8:hover, #blue9:hover, #blue10:hover, #blue11:hover, #blue12:hover, #blueLock:hover{
     background-color: blue;
     margin-right: 10px;
     padding: 10px 20px 10px 20px;
