--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,26 @@
-*{
+* {
     background-color: #E2E1E6;
 }
 
-#score{
+
+#score {
     text-align: center;
 }
 
-#reset{
-    margin-left: 47%;
-    font-size: 35px;
-    padding: 10px 10px 10px 10px;
-    border: 5px solid black;
+@media (min-width:320px) { /* Phones */
+    #reset {
+        margin-left: 44%;
+        font-size: 15px;
+        padding: 10px 10px 10px 10px;
+        border: 3px solid black;
+    }
+}
+
+@media (min-width:1000px) { /* Desktop */
+    #reset {
+        margin-left: 47%;
+        font-size: 35px;
+        padding: 10px 10px 10px 10px;
+        border: 5px solid black;
+    }
 }
