--- a/css/dice.css
+++ b/css/dice.css
@@ -1,7 +1,3 @@
-* {
-    background-color: #E2E1E6;
-}
-
 .dice{
     display: flex;
     justify-content: center;
@@ -38,7 +34,8 @@
     position:relative;
     top:50%; 
     left:50%;
-    font-size: 20px;
+    font-size: 30px;
     border: 1px solid black;
+    background-color: white;
     
 }
