--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,23 @@
 #score {
-    text-align: center;
+  text-align: center;
 }
 
-@media (min-width:320px) { /* Phones */
-    #reset {
-        margin-left: 44%;
-        font-size: 15px;
-        padding: 10px 10px 10px 10px;
-        border: 3px solid black;
-    }
+@media (min-width: 320px) {
+  /* Phones */
+  #reset {
+    margin-left: 44%;
+    font-size: 15px;
+    padding: 10px 10px 10px 10px;
+    border: 2px solid black;
+  }
 }
 
-@media (min-width:1000px) { /* Desktop */
-    #reset {
-        margin-left: 47%;
-        font-size: 35px;
-        padding: 10px 10px 10px 10px;
-        border: 3px solid black;
-    }
+@media (min-width: 1000px) {
+  /* Desktop */
+  #reset {
+    margin-left: 47%;
+    font-size: 25px;
+    padding: 10px 10px 10px 10px;
+    border: 2px solid black;
+  }
 }
