--- a/css/buttons320px.css
+++ b/css/buttons320px.css
@@ -20,7 +20,7 @@
   margin-top: 15px;
   height: 3.5em;
   width: 3.5em;
-  font-size: 15px;
+  font-size: 80%;
   border: 0.1px solid black;
   outline: none;
 }
@@ -47,7 +47,7 @@
   margin-top: 15px;
   height: 3.5em;
   width: 3.5em;
-  font-size: 15px;
+  font-size: 80%;
   border: 0.1px solid black;
   outline: none;
 }
@@ -74,7 +74,7 @@
   margin-top: 15px;
   height: 3.5em;
   width: 3.5em;
-  font-size: 15px;
+  font-size: 80%;
   border: 0.1px solid black;
   outline: none;
 }
@@ -101,7 +101,7 @@
   margin-top: 15px;
   height: 3.5em;
   width: 3.5em;
-  font-size: 15px;
+  font-size: 80%;
   border: 0.1px solid black;
   outline: none;
 }
