--- a/qwixx.Frontend/src/index.css
+++ b/qwixx.Frontend/src/index.css
@@ -18,6 +18,10 @@ body {
   min-height: 100vh;
 }
 
+a {
+  color: inherit;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -54,7 +58,7 @@ button:hover {
 .green-btn-disable,
 .green-btn-clicked-disable {
   color: black;
-  margin-right: 5px;
+  margin-right: 2px;
 }
 
 .red-btn {
